syntax = "proto3";

package billing;

option go_package = "billing-system/billing_service/proto";

service BillingService {
  // CreateOrder creates a new order with items and payment details
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
}

// Item request for order creation
message ItemRequest {
  int64 item_id = 1;
  int32 quantity = 2;
  double price = 3; // Optional override price
}

// Payment request for order creation
message PaymentRequest {
  string method = 1; // COD, VN_PAY, etc.
  double amount = 2;
}

// Request message for creating an order
message CreateOrderRequest {
  string customer_id = 1;
  repeated ItemRequest items = 2;
  repeated PaymentRequest payments = 3;
}

// Response message for creating an order
message CreateOrderResponse {
  Order order = 1;
}

// Order message representing an order
message Order {
  int64 id = 1;
  string customer_id = 2;
  double total_amount = 3;
  OrderStatus status = 4;
  repeated OrderItem items = 5;
  repeated Payment payments = 6;
  string created_at = 7;
  string updated_at = 8;
}

// OrderItem message representing an item in an order
message OrderItem {
  int64 id = 1;
  int64 order_id = 2;
  int64 item_id = 3;
  int32 quantity = 4;
}

// Payment message representing a payment for an order
message Payment {
  int64 id = 1;
  int64 order_id = 2;
  string method = 3;
  double amount = 4;
}

// Order status enum
enum OrderStatus {
  PENDING = 0;
  SUCCESS = 1;
  FAILED = 2;
}